sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:10: error: not found: value swapped
   swapped = false
   ^AlgBubbleSort1:14: error: not found: value swapped
       swapped = true;
       ^AlgBubbleSort1:16: error: method traverse has return statement; needs result type
   return swapped;
   ^AlgBubbleSort1:5: error: type mismatch;
 found   : Unit
 required: Boolean
    swapped = traverse();
                      ^