sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var swapped = true;
  while(swapped)
  	swapped = traverse();
}


def traverse() = {
   swapped = false
   for (i <- 0 to getValueCount() - 1){
     if(isSmaller(i, i+1)){
   		 swap(i,i+1);
       swapped = true;
	   }
   return swapped;
   }
}